--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       href="https://getbootstrap.com/docs/5.2/assets/css/docs.css"
       rel="stylesheet"
     />
-    <title>Bootstrap Example</title>
+    <title>Jordan's React Portfolio</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <!--
